--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,42 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
+
+# Boilerplate Options
+use_mixins = true
+use_coremod = false
+use_assetmover = false
+
+# Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
+use_access_transformer = true
+
+# Coremod Arguments
+include_mod = true
+coremod_plugin_class_name =
+
+# Mod Information
+mc_version = 1.12.2
+mod_version = 1.1.0
+maven_group = v0id.aw
+archives_base_name = aetherworks_extended_life
+
+# Debug mod compat
+debug_aetheriumashenarmor = true
+debug_baubles = true
+
+# Mod Versions
+## Maven
+version_baubles = 1.5.2
+version_crafttweaker = 4.1.20.698
+version_configanytime = 2.0
+version_groovyscript = 0.8.0
+## CurseForge
+version_aetheriumashenarmor = 3022388
+version_alfheim = 4949716
+version_embers = 5165547
+version_hadenoughitems = 5154770
+version_redcore = 4883852
+version_startuptimer = 5001902
+version_top = 4942348
+version_valkyrie = 4591076
+version_vintagefix = 5010926
