--- a/gradle.properties
+++ b/gradle.properties
@@ -16,13 +16,14 @@ coremod_plugin_class_name =
 
 # Mod Information
 mc_version = 1.12.2
-mod_version = 1.1.1
+mod_version = 1.2.0
 maven_group = v0id.aw
 archives_base_name = aetherworks_extended_life
 
 # Debug mod compat
 debug_aetheriumashenarmor = true
 debug_baubles = true
+debug_soot = true
 
 # Mod Versions
 ## Maven
@@ -36,6 +37,7 @@ version_alfheim = 5229610
 version_embers = 5595813
 version_hadenoughitems = 5471944
 version_redcore = 5403908
+version_soot = 5156451
 version_startuptimer = 5001902
 version_top = 5485686
 version_valkyrie = 5235356
