--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,16 @@ mod_version = 1.2.0
 maven_group = v0id.aw
 archives_base_name = aetherworks_extended_life
 
+# SECTION: development environment settings
+debug_run_ls = false
+debug_use_examples_folder = true
+debug_log_missing_lang_keys = true
+debug_generate_examples = true
+debug_generate_wiki = true
+debug_generate_and_crash = false
+
+groovy_version = 4.0.21
+
 # Debug mod compat
 debug_aetheriumashenarmor = true
 debug_baubles = true
