updated depedencies and mapping

--- a/gradle.properties
+++ b/gradle.properties
@@ -40,15 +40,9 @@ debug_soot = true
 version_baubles = 1.5.2
 version_crafttweaker = 4.1.20.698
 version_configanytime = 3.0
-version_groovyscript = 1.1.2
+version_groovyscript = 1.2.0-hotfix1
 ## CurseForge
 version_aetheriumashenarmor = 3022388
-version_alfheim = 5229610
-version_embers = 5595813
-version_hadenoughitems = 5471944
-version_redcore = 5403908
-version_soot = 5156451
-version_startuptimer = 5001902
-version_top = 5485686
-version_valkyrie = 5235356
-version_vintagefix = 5536276
+version_embers = 5925746
+version_hadenoughitems = 6187146
+version_soot = 6079170
