cleaned up gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx4G
 
 # Boilerplate Options
-use_mixins = true
+use_mixins = false
 use_coremod = false
 use_assetmover = false
 
@@ -42,5 +42,4 @@ version_configanytime = 3.0
 version_groovyscript = 1.2.0-hotfix1
 ## CurseForge
 version_embers = 5925746
-version_hadenoughitems = 6187146
 version_soot = 6079170
